chore: app hub access as simple proxy service